[package]
name = "sshidentify"
version = "0.2.0"
edition = "2021"
authors = ["Sebastian Reichel <sre@ring0.de>"]

[dependencies]
dirs = "6"
nix = { version = "0.29", optional = true, features = ["process", "user"] }
libc = { version = "0.2", optional = true }
regex = { version = "1.5", optional = true }
systemd = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
sha2 = { version = "0.10", optional = true }
md5  = { version = "0.7", optional = true }

[features]
default = ["exposeauth", "journal"]
journal = ["dep:nix", "dep:libc", "dep:systemd", "dep:regex", "dep:base64", "dep:sha2", "dep:md5"]
exposeauth = []
